gitops/argocd/routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
spec:
  hostnames:
  - argocd.127.0.0.1.nip.io
  parentRefs:
  - name: kubernetes-sandbox-gateway
    namespace: nginx-gateway-system
    sectionName: http
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
